@@ -4,6 +4,7 @@ $Id$
 
 	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Avoid '.SH' macros with no
 	argument.  Remove colons from section names.
+	Merge sections CONTRIBUTORS and CREDITS with AUTHORS.
 
 2014-07-05  Christian Franke  <franke@computer.org>
 
